deploy/k8s/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.0
          args:
            - start-dev
            - --import-realm
            - --hostname-strict=false
            - --http-enabled=true
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: keycloak-realm
              mountPath: /opt/keycloak/data/import/
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
            failureThreshold: 30
      volumes:
        - name: keycloak-realm
          configMap:
            name: keycloak-realm
